avec chat socket

--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,63 @@
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>22</maven.compiler.source>
-        <maven.compiler.target>22</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <exec.mainClass>ProgsFournisGE52024</exec.mainClass>
     </properties>
+    
+        <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.6.0</version>
+                <executions>
+                    <execution>
+                        <id>chatServeur</id>
+                        <configuration>
+                            <finalName>chatServeur</finalName>
+                            <!--<appendAssemblyId>false</appendAssemblyId>-->
+                            <descriptorRefs>
+                                <descriptorRef>jar-with-dependencies</descriptorRef>
+                            </descriptorRefs>
+                            <archive>
+                                <manifest>
+                                    <addClasspath>true</addClasspath>
+                                    <mainClass>fr.insa.beuvron.cours.multiTache.sockets.prodConsoTexte.texteChat.ServerChatText</mainClass>
+                                </manifest>
+                            </archive>
+                        </configuration>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>chatClient</id>
+                        <configuration>
+                            <finalName>chatClient</finalName>
+                            <!--<appendAssemblyId>false</appendAssemblyId>-->
+                            <descriptorRefs>
+                                <descriptorRef>jar-with-dependencies</descriptorRef>
+                            </descriptorRefs>
+                            <archive>
+                                <manifest>
+                                    <addClasspath>true</addClasspath>
+                                    <mainClass>fr.insa.beuvron.cours.multiTache.sockets.prodConsoTexte.texteChat.ClientChatText</mainClass>
+                                </manifest>
+                            </archive>
+                        </configuration>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <!--
+            -->
+            
+        </plugins>
+    </build>
+
 </project>
