avec chat socket

--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
                             <archive>
                                 <manifest>
                                     <addClasspath>true</addClasspath>
-                                    <mainClass>fr.insa.beuvron.cours.multiTache.sockets.prodConsoTexte.texteChat.ServerChatText</mainClass>
+                                    <mainClass>fr.insa.beuvron.cours.multiTache.sockets.chat.texteChat.ServerChatText</mainClass>
                                 </manifest>
                             </archive>
                         </configuration>
@@ -49,7 +49,7 @@
                             <archive>
                                 <manifest>
                                     <addClasspath>true</addClasspath>
-                                    <mainClass>fr.insa.beuvron.cours.multiTache.sockets.prodConsoTexte.texteChat.ClientChatText</mainClass>
+                                    <mainClass>fr.insa.beuvron.cours.multiTache.sockets.chat.texteChat.ClientChatText</mainClass>
                                 </manifest>
                             </archive>
                         </configuration>
